<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_species"
        style="@style/DsTextMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_species"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_size_02"
        app:cardCornerRadius="@dimen/ds_size_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_species">

        <RadioGroup
            android:id="@+id/group_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_species_human"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_human"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_alien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_alien"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_robot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_robot"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_mythological"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_mythological"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_humanoid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_humanoid"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_poopybutthole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_poopybutthole"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_animal"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_disease"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_species_unknown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_unknown"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_no_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:checked="true"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_none"
                tools:enabled="false" />

        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
