<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_status"
        style="@style/DsTextMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_size_02"
        app:cardCornerRadius="@dimen/ds_size_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_status">

        <RadioGroup
            android:id="@+id/group_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_status_alive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_alive"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_status_dead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_dead"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_status_unknown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_unknown"
                tools:enabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/ds_size_04"
                android:background="#464646" />

            <RadioButton
                android:id="@+id/radio_no_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ds_size_04"
                android:checked="true"
                android:layoutDirection="rtl"
                android:padding="@dimen/ds_size_06"
                android:text="@string/filter_none"
                tools:enabled="false" />

        </RadioGroup>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
